start working through scrollbar issues (yay...)

--- a/src/GeneralComponents/PageSection/PageSection.module.css
+++ b/src/GeneralComponents/PageSection/PageSection.module.css
@@ -5,10 +5,6 @@
     min-height: 370px;
 }
 
-.section_title {
-    
-}
-
 .content.dark_mode {
     box-shadow: var(--dark-raised-boxshadow);
 }
