--- a/src/LandingPage/ProjectsSection/ProjectsSection.module.css
+++ b/src/LandingPage/ProjectsSection/ProjectsSection.module.css
@@ -15,29 +15,6 @@
     flex-wrap: wrap;
     overflow-x: auto;
     overflow-y: hidden;
-
-    scrollbar-color: rebeccapurple green;
-    scrollbar-width: thin;
-}
-
-/* width */
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #c81919;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
 }
 
 .projects.light_mode {
